# shared-type-rs

./: Cargo.toml  README.md
examples/: example.rs
src/: lib.rs  shared.rs
src/shared/: tests.rs
